fix dark mode

--- a/src/sass/utils/_dark-mode.scss
+++ b/src/sass/utils/_dark-mode.scss
@@ -9,7 +9,7 @@
   bottom: 5px;
   left: calc(50vw - 30.5px);
 
-  transition: background 250ms $cubic, box-shadow 250ms $cubic;
+  transition: background-color 250ms $cubic, box-shadow 250ms $cubic;
 
   cursor: pointer;
   .library-header & {
@@ -27,7 +27,7 @@
   vertical-align: middle;
   transition: background-color 0.25s;
   top: -2px;
-  transition: background 250ms $cubic, left 250ms $cubic;
+  transition: background-color 250ms $cubic, left 250ms $cubic;
 }
 
 .dark-toggle-switch:before,
@@ -253,3 +253,4 @@ main,
 .trending-gallery__title {
   transition: color 250ms $cubic;
 }
+
